samples/_failures_safe/1761184541_670237_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50715688.c: In function ‘cleanup_analyzer’:
./samples/SAFE/__tmp_50715688.c:147:9: error: expected expression at end of input
  147 |         analyzer->words =
      |         ^~~~~~~~
./samples/SAFE/__tmp_50715688.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_50715688.c:147:9: error: expected declaration or statement at end of input
